# Keycloak

./: .gitignore  AGENTS.md  Makefile  README.md  docker-bake.hcl  docker-compose.keycloak.yml  docker-compose.yml  verify_health.sh
.github/workflows/: backend.yml  ci.yml  deploy-bluegreen.yml  docker.yml  frontend.yml  release.yml  security.yml
.husky/: pre-commit
.husky/_/: husky.sh
adr/: 0002-choose-react-query.md
apps/bear-review-spa/: jest.config.js  (+4 more)
bear_review_api/: alembic.ini  pyproject.toml
bear_review_api/alembic/: env.py
bear_review_api/alembic/versions/: 0001_initial.py
bear_review_api/app/: main.py
bear_review_api/app/models/: review.py
bear_review_api/app/notifiers/: base.py  email.py  push.py
bear_review_api/app/routers/: reviews.py
bear_review_api/app/services/: tasks.py
docs/: architecture.md  backend.md  ci-cd-monitoring.md  frontend.md  hardening.md  identity-service.md  mech-exo-data.md  operability.md  system-arch-v1.drawio
infra/: README.md  main.tf  outputs.tf  rds.tf  terraform.tfvars.example  variables.tf
k6/: smoke.sh
keycloak/: init.sql  realm-export.json
monitoring/: loki-values.yaml  prom-stack-values.yaml
python/: pyproject.toml
python/mech_exo/etl/: indicators.py
python/mech_exo/ingestors/: alpha.py  yahoo.py
python/mech_exo/models/: train.py
python/unified_auth/: __init__.py  fastapi.py  jwt.py
runbooks/: bluegreen-deploy.md  keycloak-ha.md  restore-db.md
scripts/: backup_kc.sh  bluegreen_deploy.sh  kc-up.sh  kind-test.sh  restore-drill.sh
tests/: test_etl.py  test_jwt.py  test_reviews.py
(+61 files in other folders)
